# polygon

./: .dockerignore  .env.example  .gitignore  .tsxcheckignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.alternative  ENV_SETUP.md  README.md  UI_DESIGN_SYSTEM.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  factory.ts  package.json  poc_instagram.ts  poc_instagram_output.json
.github/: copilot-instructions.md
.github/workflows/: build-images.yml  ci.yml  deploy.yml
axa-network/: Cargo.toml  README.md
axa-network/src/: api.rs  chain.rs  crypto.rs  errors.rs  lib.rs  main.rs  model.rs  scylla_store.rs  storage.rs
build-tools/: Makefile  README.md  react-analyzer.ts  tsx_validator  tsx_validator.c  tsx_validator.h  tsx_validator_main.c
clickhouse/config.d/: disable_logging.xml
docs/: CI_CD.md  DATA_STUDIO_IMPLEMENTATION_PLAN.md  SMART_MONEY_PREDICTION_DESIGN.md
nginx/: nginx.conf
src/: App.tsx  frontend.tsx  index.css  index.html  index.ts
src/api/: config.ts  crontab.ts  datastudio.ts  day_in_life.ts  general.ts  index.ts  news.ts  news_impact.ts  news_search.ts  pipeline.ts  polygon.ts  polymarket.ts  polytrustfactor.ts  predictions.ts  system.ts  wallet_flow.ts  wanted.ts  whale_positions.ts
src/arbscanner/: Cargo.toml  Dockerfile
src/arbscanner/src/: config.rs  main.rs  matcher.rs  notifier.rs  scanner.rs
src/arbscanner/src/exchanges/: binance.rs  bitget.rs  bybit.rs  coinbase.rs  gate.rs  htx.rs  kraken.rs  kucoin.rs  mexc.rs  mod.rs  okx.rs
user_files/: config.yaml  crontab.json
wallet-taker/: .dockerignore  .env.example  AUTO_LIMITS_GUIDE.md  Dockerfile  README.md  RESTART_REQUIRED.md  WITHDRAWAL_PROCESSING.md  deploy.sh  dev.sh  docker-compose.yml  package.json  restart.sh  start.sh
(+606 files in other folders)
