[package]
name = "arbscanner"
version = "0.1.0"
edition = "2021"
authors = ["Polygon Team"]
description = "High-performance crypto arbitrage scanner"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros", "sync", "time"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
dashmap = "5.5"  # Lock-free concurrent hashmap
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"  # Gzip decompression for HTX
thiserror = "1.0"
anyhow = "1.0"
url = "2.5"

# Env config
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
